--- a/src/containers/BeerHeader/Header.module.css
+++ b/src/containers/BeerHeader/Header.module.css
@@ -33,6 +33,9 @@ input {
 .link {
     margin-right: 10px;
     cursor: pointer;
+    border:none;
+    background-color: #F89400;
+    color: white;
 }
 .href {
     text-decoration: none;
